fixed some text alignments

--- a/src/components/Contact.module.css
+++ b/src/components/Contact.module.css
@@ -62,4 +62,7 @@
     .links {
         align-items: center;
     }
+    .text p {
+        text-align: center;
+    }
 }
