--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -91,6 +91,10 @@
     .description {
         text-align: center;
     }
+    .title {
+ 
+        text-align: center;
+    }
 }
 
 
